# securo

./: CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/api/: admin.py  currencies.py
backend/app/core/: config.py
backend/app/providers/: __init__.py  enable_banking.py  simplefin.py
backend/app/tasks/: asset_tasks.py  fx_backfill_tasks.py  fx_rate_tasks.py  recurring_tasks.py  sync_tasks.py
backend/tests/: test_admin_api.py  test_providers_simplefin.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: index.css
frontend/src/components/: app-layout.tsx  auth-brand-panel.tsx  currency-select.tsx  token-connect-dialog.tsx
frontend/src/lib/: api.ts  i18n.ts  theme-utils.ts
frontend/src/locales/: en.json  es.json  i18n.test.ts  it.json  pt-BR.json
frontend/src/pages/: accounts.tsx  login.tsx  register.tsx  setup.tsx
frontend/src/pages/admin/: settings.tsx
