[project]
name = "securo-backend"
version = "0.1.0"
description = "Securo API - Personal Finance Manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography==46.0.7",
    "passlib[bcrypt]>=1.7.4",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "ofxparse>=0.21",
    "celery[redis]>=5.3.0",
    "aiofiles>=24.0",
    "redis[hiredis]>=5.0.0",
    "pyotp>=2.9.0",
    "yfinance>=1.3.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
    # Bundled multilingual embedder — only imported on demand by the
    # agents knowledge-base path. ONNX runtime, ~120 MB model downloaded
    # on first use to /app/data/embedding_models. Users not on the
    # agents feature pay zero cost (the package is installed but never
    # imported).
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app/cli.py",
    "app/worker.py",
    "app/tasks/*",
    "app/providers/pluggy.py",
    "app/providers/enable_banking.py",
    "app/providers/simplefin.py",
    "app/providers/market_price.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E711", "E712"]
